# fastapi

./: .env  .gitignore  .ls-lint.yml  .typos.toml  README.md  justfile  pyproject.toml  ruff.toml  ty.toml
src/: main.py
src/classes/enums/: error.py
src/classes/exceptions/: service.py
src/classes/models/: response.py
src/configs/: log.py  vars.py
src/functions/: env.py
src/lib/errors/: service.py
src/middlewares/: on_exception.py
src/modules/info/: models.py  routes.py  services.py
src/router/: main.py
