[project]
name = "app"
version = "0.0.0"
dependencies = [
    "fastapi>=0.135.1,<0.136.0",
    "jder-fastapi==0.2.5,<0.3.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "scalar-fastapi>=1.8.0,<2.0.0",
    "uvicorn[standard]>=0.41.0,<0.42.0",
]
requires-python = ">=3.13.0,<4.0.0"

[dependency-groups]
dev = [
    "ruff>=0.15.5,<0.16.0",
    "ty>=0.0.21,<0.1.0",
]
