[project]
name = "app"
version = "0.0.0"
dependencies = [
    "fastapi>=0.135.3,<0.136.0",
    "jder-fastapi==0.2.5,<0.3.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "scalar-fastapi>=1.8.2,<2.0.0",
    "uvicorn[standard]>=0.44.0,<0.45.0",
]
requires-python = ">=3.13.0,<4.0.0"

[dependency-groups]
dev = [
    "ruff>=0.15.10,<0.16.0",
    "ty>=0.0.29,<0.1.0",
]
